--- a/uwthesis.bib
+++ b/uwthesis.bib
@@ -2263,3 +2263,36 @@ series = {SOSP ’19}
 	year = {},
 	note = {(Accessed on 09/01/2019)}
 }
+
+@misc{TuringNL61:online,
+author = {},
+title = {Turing-NLG: A 17-billion-parameter language model by Microsoft - Microsoft Research},
+howpublished = {\url{https://www.microsoft.com/en-us/research/blog/turing-nlg-a-17-billion-parameter-language-model-by-microsoft/}},
+month = {},
+year = {},
+note = {(Accessed on 02/10/2020)}
+}
+
+@inproceedings{10.1145/3302424.3303957,
+author = {Kim, Soojeong and Yu, Gyeong-In and Park, Hojin and Cho, Sungwoo and Jeong, Eunji and Ha, Hyeonmin and Lee, Sanha and Jeong, Joo Seong and Chun, Byung-Gon},
+title = {Parallax: Sparsity-Aware Data Parallel Training of Deep Neural Networks},
+year = {2019},
+isbn = {9781450362818},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi.org/10.1145/3302424.3303957},
+doi = {10.1145/3302424.3303957},
+booktitle = {Proceedings of the Fourteenth EuroSys Conference 2019},
+articleno = {Article 43},
+numpages = {15},
+keywords = {sparsity-aware data parallel training, deep learning framework, graph transformation},
+location = {Dresden, Germany},
+series = {EuroSys ’19}
+}
+
+@inproceedings{Xue2019FastDD,
+  title={Fast Distributed Deep Learning over RDMA},
+  author={Jilong Xue and Youshan Miao and Cheng Chen and Ming Wu and Lintao Zhang and Lidong Zhou},
+  booktitle={EuroSys '19},
+  year={2019}
+}
