--- a/uwthesis.tex
+++ b/uwthesis.tex
@@ -99,6 +99,9 @@
 \newcommand{\autoplink}{Autotune\xspace}
 \newcommand{\code}[1]{\texttt{\small{#1}}}
 \newcommand{\strongbaseline}{strong baseline\xspace}
+\newcommand{\psliteib}{\mxnet IB\xspace}
+\newcommand{\pshard}{PShard\xspace}
+\newcommand{\pswitch}{PSwitch\xspace}
 
 % metafont font.  If logo not available, use the second form
 %
@@ -192,12 +195,16 @@ Special thanks to Novak Djokovic, we may never meet, but you bring the inspirati
 
 
 \end{center}}
+\textpages
 
 \input{introduction.tex}
 \input{background.tex}
 \input{PBox.tex}
 \input{PHub.tex}
 \input{PLink.tex}
+\input{EvaluationPHub.tex}
+\input{EvaluationPLink.tex}
+
 \bibliographystyle{plain}
 \bibliography{uwthesis}
 
