--- a/uwthesis.tex
+++ b/uwthesis.tex
@@ -191,7 +191,7 @@ Thank you to this committee for keeping me on track.
 Thank you to my friends for the joy and laughter in the journey.
 
 
-Special thanks to Novak Djokovic, we may never meet, but you bring the inspirations on and off court.
+Special thanks to Novak Djokovic, we may never meet, but you bring inspirations on and off court.
 
 
 \end{center}}
@@ -204,6 +204,7 @@ Special thanks to Novak Djokovic, we may never meet, but you bring the inspirati
 \input{PLink.tex}
 \input{EvaluationPHub.tex}
 \input{EvaluationPLink.tex}
+\input{Conclusion.tex}
 
 \bibliographystyle{plain}
 \bibliography{uwthesis}
